MDEV-31059 "Slave SQL" errors upon concurrent DML and erroneous ALTER

Skip more rpl-related error handling.
Also move the error check inside if (table) -- otherwise the error
should be handled already.